[package]
name = "leetcode-rust"
version = "0.1.2"
authors = ["yjhmelody <465402634@qq.com>"]
keywords = ["LeetCode"]
description = "Some solutions about leetcode in rust lang"
homepage = "https://github.com/yjhmelody/leetcode-rust"
readme = "README.md"
repository = "https://github.com/yjhmelody/leetcode-rust"
license = "MIT"

edition = "2018"

[dependencies]
# rand = "0.6"